Admit duplicate time-series from NWIS.
Treats the NWIS IV service like any other service or
source format, admitting duplicates transparently and
warning when they are encountered and the range of
time-series metadata discovered.

Refs #113397